--- a/app/src/main/res/layout/appbar.xml
+++ b/app/src/main/res/layout/appbar.xml
@@ -6,18 +6,19 @@
 
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/cardview_dark_background"
+    android:background="@color/grey_high"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
         android:id="@+id/appbarLogo"
-        android:layout_width="150dp"
-        android:layout_height="43dp"
+        android:layout_width="157dp"
+        android:layout_height="54dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.006"
+        app:layout_constraintHorizontal_bias="0.019"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/vidgaze_nobg" />
 
     <ImageView
