--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,19 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".MainActivity">
 
-<include
-    android:id="@+id/include"
-    layout="@layout/appbar" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/appbar" />
 
-<FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/container"
-    android:layout_above="@id/bottom_navigation"/>
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="835dp"
+        android:layout_above="@id/bottom_navigation"
+        android:layout_below="@id/include"
+
+
+        />
 
 <com.google.android.material.bottomnavigation.BottomNavigationView
     android:layout_width="match_parent"
